--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,13 @@
 [tool.poetry]
-name = "sandbox"
+name = "ole-tools"
 version = "0.1.0"
 description = ""
 authors = ["Unknown"]
+packages = [{ include = "ole" }]
+
+[tool.poetry.scripts]
+ole_measure = 'ole.scripts.measure_display:main'
+ole_analyze = 'ole.scripts.analyze_display_measurements:main'
 
 [tool.poetry.dependencies]
 requests = "^2.31.0"
