--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ packages = [{ include = "ole" }]
 [tool.poetry.scripts]
 ole_measure = 'ole.scripts.measure_display:main'
 ole_analyze = 'ole.scripts.analyze_display_measurements:main'
+ole_anonymize = 'ole.scripts.strip_metadata:main'
 
 [tool.poetry.dependencies]
 requests = "^2.31.0"
