--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,18 +29,18 @@ telnetlib3 = "^2.0.4"
 exscript = "^2.6.28"
 
 [tool.poetry.dev-dependencies]
-jupyter = "^1.0.0"
-black = "^23.3.0"
-pytest = "^7.4.0"
-pytest-xdist = "^3.3.1"
-pyright = "^1.1.332"
-ruff = "^0.1.0"
-flynt = "^1.0.1"
-isort = "^5.12.0"
-ipykernel = "^6.29.0"
+jupyter = "*"
+black = "*"
+pytest = "*"
+pytest-xdist = "*"
+pyright = "*"
+ruff = "*"
+flynt = "*"
+isort = "*"
+ipykernel = "*"
 networkx = ">= 2.7, < 3"
 opencolorio = ">= 2, < 3"
-tqdm = ">= 4, < 5"
+tqdm = "*"
 
 colour-science = { path = "colour-science", develop = true }
 colour-datasets = { path = "colour-datasets", develop = true }
