--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,9 +14,9 @@ csmf_doctor = 'ole.scripts.csmf_doctor:main'
 [tool.poetry.dependencies]
 requests = "^2.31.0"
 python = "~3.12"
-colour-science = "*"
-colour-datasets = "*"
-colour-specio = "*"
+colour-science = "^0.4.4"
+colour-datasets = "^0.2.5"
+colour-specio = "^0.3.0"
 numpy = "^1.25.0"
 scipy = "^1.10.1"
 xxhash = "^3.2.0"
