remove script in favor of specio

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,6 @@ packages = [{ include = "ole" }]
 ole_measure = 'ole.scripts.measure_display:main'
 ole_analyze = 'ole.scripts.analyze_display_measurements:main'
 ole_anonymize = 'ole.scripts.strip_metadata:main'
-csmf_doctor = 'ole.scripts.csmf_doctor:main'
 
 [tool.poetry.dependencies]
 requests = "^2.31.0"
@@ -77,7 +76,7 @@ reportUnsupportedDunderAll = false
 reportUnusedExpression = false
 
 [tool.pytest.ini_options]
-addopts = "-n auto --dist=loadscope --durations=5"
+addopts = "-n auto --dist=loadscope --durations=5 --import-mode=importlib"
 filterwarnings = [
     "ignore::RuntimeWarning",
     "ignore::pytest.PytestCollectionWarning",
