--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -77,7 +77,7 @@
   },
   "isort.importStrategy": "fromEnvironment",
   "[python]": {
-    "editor.defaultFormatter": "ms-python.black-formatter"
+    "editor.defaultFormatter": "charliermarsh.ruff"
   },
   "[toml]": {
     "editor.defaultFormatter": "tamasfe.even-better-toml"
@@ -86,5 +86,9 @@
   "protoc": {
     "options": ["--proto_path=colour-specio"]
   },
-  "python.analysis.ignore": ["colour-science", "colour-datasets", "*_pb2.py"]
+  "python.analysis.ignore": ["colour-science", "colour-datasets", "*_pb2.py"],
+  "mypy-type-checker.preferDaemon": true,
+  "mypy-type-checker.args": ["--explicit-package-bases"],
+  "python.analysis.diagnosticMode": "workspace",
+  "cSpell.words": ["csmf"]
 }
