--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -89,7 +89,7 @@
   "python.analysis.ignore": ["colour-science", "colour-datasets", "*_pb2.py"],
   "mypy-type-checker.preferDaemon": true,
   "mypy-type-checker.args": ["--explicit-package-bases"],
-  "python.analysis.diagnosticMode": "workspace",
+  "python.analysis.diagnosticMode": "openFilesOnly",
   "cSpell.words": ["csmf"],
   "python.terminal.activateEnvironment": false
 }
