--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ opencv-python = "^4.8.1.78"
 pymoo = "^0.6.1.1"
 telnetlib3 = "^2.0.4"
 exscript = "^2.6.28"
+echion = "^0.3.0"
 
 [tool.poetry.dev-dependencies]
 jupyter = "*"
