--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ requests = "^2.31.0"
 python = "~3.12"
 colour-science = "^0.4.4"
 colour-datasets = "^0.2.5"
-colour-specio = "^0.3.0"
+colour-specio = "^0.4.0a0"
 numpy = "^1.25.0"
 scipy = "^1.10.1"
 xxhash = "^3.2.0"
